Working CMake build script on MacOS 10.14/Mojave (including small source changes for modern C++ compiler standards)

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,11 @@ Makefile.in
 *.lai
 *.la
 *.a
+
+# CMake generated build files
+CMakeCache.txt
+Makefile
+cmake_install.cmake
+CMakeFiles/*
+cmake-build/*
+bin/*
