--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -121,8 +121,9 @@ else()
      set(RHEL_LINKER_APPENDS "")
 endif()
 if(APPLE)
+    #"${CMAKE_CXX_FLAGS} -Wall -std=c++14 -stdlib=libc++ -fPIC -fopenmp -g -O2 -fno-lto
     set(CMAKE_CXX_FLAGS
-        "${CMAKE_CXX_FLAGS} -Wall -std=c++14 -stdlib=libc++ -fPIC -fopenmp -g -O2 -fno-lto \
+        "${CMAKE_CXX_FLAGS} -Wall -std=c++11 -fPIC -fopenmp -g -O2 -fno-lto \
         -I/usr/local/include -I/usr/local/opt/llvm/include -Igtfold-mfe/include/ \
         ${PC_GMP_INCLUDE_DIRS} ${PC_GMPXX_INCLUDE_DIRS} \
         -DGTFOLD_PACKAGE_VERSION=\"${GTFOLD_PACKAGE_VERSION}\""
