--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -126,8 +126,8 @@ if(APPLE)
     set(CMAKE_CXX_FLAGS
         "${CMAKE_CXX_FLAGS} -Wall -mlinker-version=450 -std=c++14 -fPIC -fopenmp -g -O2 -fno-lto \
         -I/usr/local/include -I/usr/local/opt/llvm/include -Igtfold-mfe/include/ \
-        ${PC_GMP_INCLUDE_DIRS} ${PC_GMPXX_INCLUDE_DIRS} \
         -DGTFOLD_PACKAGE_VERSION=\"${GTFOLD_PACKAGE_VERSION}\""
+         #${PC_GMP_INCLUDE_DIRS} ${PC_GMPXX_INCLUDE_DIRS} \
     )
     set(CMAKE_EXE_LINKER_FLAGS
         "${CMAKE_CXX_FLAGS} ${CMAKE_EXE_LINKER_FLAGS} \
