--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -127,7 +127,7 @@ if(APPLE)
         "${CMAKE_CXX_FLAGS} -Wall -mlinker-version=450 -std=c++14 -fPIC -fopenmp -g -O2 -fno-lto \
         -I/usr/local/include -I/usr/local/opt/llvm/include -Igtfold-mfe/include/ \
         -DGTFOLD_PACKAGE_VERSION=\"${GTFOLD_PACKAGE_VERSION}\"" \
-        ${PC_GMP_INCLUDE_DIRS} ${PC_GMPXX_INCLUDE_DIRS} \
+        ${PC_GMP_INCLUDE_DIRS} ${PC_GMPXX_INCLUDE_DIRS}
     )
     # NOTE: Providing the explicit LLVM linker path seems to fix the problems on Mojave.
     set(CMAKE_EXE_LINKER_FLAGS
