Proposed fix for Mojave build errors related to location of cstring headers

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -122,9 +122,9 @@ else()
      set(RHEL_LINKER_APPENDS "")
 endif()
 if(APPLE)
-    #"${CMAKE_CXX_FLAGS} -Wall -std=c++14 -stdlib=libc++ -fPIC -fopenmp -g -O2 -fno-lto
     set(CMAKE_CXX_FLAGS
-        "${CMAKE_CXX_FLAGS} -Wall -mlinker-version=450 -std=c++14 -fPIC -fopenmp -g -O2 -fno-lto \
+        "${CMAKE_CXX_FLAGS} -Wall -mlinker-version=450 -isystem /usr/local/opt/llvm/include \
+        -std=c++14 -fPIC -fopenmp -g -O2 -fno-lto \
         -I/usr/local/include -I/usr/local/opt/llvm/include -Igtfold-mfe/include/ \
         -DGTFOLD_PACKAGE_VERSION=\"${GTFOLD_PACKAGE_VERSION}\"" #${PC_GMP_INCLUDE_DIRS} ${PC_GMPXX_INCLUDE_DIRS}
     )
@@ -132,8 +132,7 @@ if(APPLE)
     set(CMAKE_EXE_LINKER_FLAGS
         "${CMAKE_CXX_FLAGS} ${CMAKE_EXE_LINKER_FLAGS} \
          -mlinker-version=450 -L/usr/local/lib -lm -lpthread \
-        -L/usr/local/opt/llvm/lib \
-        ${PC_GMP_LIBRARIES} ${PC_GMPXX_LIBRARIES}"
+        -L/usr/local/opt/llvm/lib ${PC_GMP_LIBRARIES} ${PC_GMPXX_LIBRARIES}"
     )
 elseif(UNIX AND NOT APPLE) # Primary target: Linux (typically RHEL)
     set(CMAKE_CXX_FLAGS
