--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -125,7 +125,8 @@ if(APPLE)
     set(CMAKE_CXX_FLAGS
         "${CMAKE_CXX_FLAGS} -Wall -mlinker-version=450 -isystem /usr/local/opt/llvm/include \
         -std=c++14 -fPIC -fopenmp -g -O2 -fno-lto \
-        -I/usr/local/include -I/usr/local/opt/llvm/include -Igtfold-mfe/include/ \
+        -nostdinc++ -I/usr/local/opt/llvm/include/c++/v1 /usr/local/opt/llvm/lib/libc++.dylib -lstdc++  \
+        -I/usr/local/opt/llvm/include -I/usr/local/include -Igtfold-mfe/include/ \
         -DGTFOLD_PACKAGE_VERSION=\"${GTFOLD_PACKAGE_VERSION}\"" #${PC_GMP_INCLUDE_DIRS} ${PC_GMPXX_INCLUDE_DIRS}
     )
     # NOTE: Providing the explicit LLVM linker path seems to fix the problems on Mojave.
